objects/csmrgp__CaseMergeSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>csmrgp__CopyFields10__c</fullName>
        <label>CopyFields10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csmrgp__CopyFields11__c</fullName>
        <label>CopyFields11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csmrgp__CopyFields12__c</fullName>
        <label>CopyFields12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csmrgp__DeleteOriginal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DeleteOriginal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csmrgp__IgnoreInsErrs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IgnoreInsErrs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csmrgp__ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csmrgp__ParentField__c</fullName>
        <label>ParentField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csmrgp__ReParent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReParent</label>
        <type>Checkbox</type>
    </fields>
    <label>CaseMergeSettings</label>
</CustomObject>